# arctos_motion_planning

./: CMakeLists.txt  README.md  package.xml
config/: motion_planning_display.rviz
launch/: capture_cube_pose.launch.py  grasp_block_demo.launch.py  move_demo.launch.py  realsense_to_moveit.launch.py  realsense_to_moveit_local_updates_only.launch.py
src/: capture_cube_pose.cpp  grasp_block_demo.cpp  move_demo.cpp  realsense_to_moveit_local_updates_only_node.cpp  serial_joint_state_publisher.cpp
